--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
 baseurl = "https://intuitiveexplanations.com"
+canonifyURLs = true
 copyright = "Radon Rosborough"
 languageCode = "en-us"
 theme = "ghostwriter"
