Check versions of things, use more recent Ubuntu
Also install Hugo.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,10 @@ addons:
     packages:
       - texlive
       - latexmk
+      - hugo
+dist: trusty
+before_script:
+  - latex --version
+  - latexmk --version
+  - hugo --version
 script: make
