Attempt to use tlmgr to install dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 dist: trusty
-cache:
-  - /tmp/texlive
-  - $HOME/.texlive
+addons:
+  apt:
+    packages:
+      - texlive
+      - latexmk
 install:
-  - source tex/travis.sh
+  - tlmgr install beamer
   - wget https://github.com/spf13/hugo/releases/download/v0.14/hugo_0.14_amd64.deb
   - sudo dpkg -i hugo*.deb
 before_script:
