--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ addons:
       - latexmk
 install:
   - tlmgr init-usertree
-  - tlmgr install beamerx
+  - tlmgr install beamer
   - wget https://github.com/spf13/hugo/releases/download/v0.14/hugo_0.14_amd64.deb
   - sudo dpkg -i hugo*.deb
 before_script:
