Install package tikz-3dplot

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,10 @@ addons:
       - latexmk
 install:
   - tlmgr init-usertree
-  - tlmgr option repository ftp://tug.org/historic/systems/texlive/2015/tlnet-final
+  - tlmgr option repository
+    ftp://tug.org/historic/systems/texlive/2015/tlnet-final
   - tlmgr install beamer chngcntr enumitem environ etoolbox lipsum
-    mdframed nag needspace pgf tocloft trimspaces xcolor
+    mdframed nag needspace pgf tikz-3dplot tocloft trimspaces xcolor
   - go get -v github.com/spf13/hugo
 before_script:
   - latex --version
