--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,10 @@ addons:
   apt:
     packages:
       - xzdec
-      - latexmk
 install:
-  - sudo add-apt-repository ppa:jonathonf/texlive-2016
-  - sudo apt-get update
-  - sudo apt-get install texlive
+  - sudo add-apt-repository -y ppa:jonathonf/texlive-2016
+  - sudo apt-get -qq update
+  - sudo apt-get install -y texlive latexmk
   - tlmgr init-usertree
   - tlmgr install beamer chngcntr enumitem environ etoolbox lipsum
     mdframed nag needspace pgf pgfplots tikz-3dplot tocloft trimspaces
