Add trailing slash to baseurl
This prevents the CSS and JS paths from getting messed up in
production, as I just found out.

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://intuitiveexplanations.com"
+baseurl = "https://intuitiveexplanations.com/"
 canonifyURLs = true
 copyright = "Radon Rosborough"
 languageCode = "en-us"
