--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ addons:
       - texlive
       - latexmk
       - xzdec
+  ssh_known_hosts:
+    - intuitiveexplanations.com
 install:
   - tlmgr init-usertree
   - tlmgr option repository
