--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,11 @@ install:
       trimspaces
       xcolor
   - wget https://github.com/spf13/hugo/releases/download/v0.18.1/hugo_0.18.1_Linux-64bit.tar.gz
-  - tar xzvf hugo_0.18.1_Linux-64bit.tar.gz
-  - mv hugo_0.18.1_linux_amd64/hugo_0.18.1_linux_amd64 /usr/local/bin/hugo
+      -O /tmp/hugo.tar.gz
+  - tar xzvf /tmp/hugo.tar.gz
+  - mv hugo_0.18.1_linux_amd64 hugo
+  - mv hugo/hugo_0.18.1_linux_amd64 hugo/hugo
+  - export PATH=$PATH:$PWD/hugo
 before_script:
   - latex --version
   - latexmk --version
