--- a/files/.htaccess
+++ b/files/.htaccess
@@ -26,3 +26,11 @@ Redirect 301 /files/ProbabilityDistributionProofs.pdf /ProbabilityDistributionsM
 
 Redirect 301 /files /
 Redirect 301 /files/LaTeXSource.pdf https://github.com/raxod502/intuitive-explanations/tree/master/tex
+
+################################################################################
+#### Server settings
+
+Options -Indexes
+
+ErrorDocument 403 /404.html
+ErrorDocument 404 /404.html
