--- a/.travis.yml
+++ b/.travis.yml
@@ -47,10 +47,8 @@ install:
   # Install Hugo
   - wget https://github.com/spf13/hugo/releases/download/v0.30.2/hugo_0.30.2_Linux-64bit.tar.gz
       -O /tmp/hugo.tar.gz
-  - tar xzvf /tmp/hugo.tar.gz
-  - mv hugo_0.30.2_linux_amd64 hugo
-  - mv hugo/hugo_0.30.2_linux_amd64 hugo/hugo
-  - export PATH=$PATH:$PWD/hugo
+  - tar xzv -C /tmp -f /tmp/hugo.tar.gz
+  - export PATH=$PATH:/tmp/hugo
 before_script:
   - latex --version
   - latexmk --version
