Install GIMP on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 dist: trusty
 sudo: false
+addons:
+  apt:
+    packages:
+      - gimp
 install:
   # Install TeX Live
   - wget --directory-prefix /tmp
