Install Python dependencies in virtualenv

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ addons:
       - gimp
 install:
   # Install Python packages
-  - pip2 install -r requirements.txt
+  - python2 -m venv /tmp/venv
+  - source /tmp/venv/bin/activate
+  - pip install -r requirements.txt
   # Install TeX Live
   - wget --directory-prefix /tmp
       http://mirror.ctan.org/systems/texlive/tlnet/install-tl-unx.tar.gz
