--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ addons:
       - gimp
 install:
   # Install Python packages
+  - python2 --version
   - python2 -m venv /tmp/venv
   - source /tmp/venv/bin/activate
   - pip install -r requirements.txt
