--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ addons:
       - gimp
 install:
   # Install Python packages
-  - pip2 install -r requirements.txt
+  - pip install -r requirements.txt
+  - pip list --format=columns
   # Install TeX Live
   - wget --directory-prefix /tmp
       http://mirror.ctan.org/systems/texlive/tlnet/install-tl-unx.tar.gz
