Ignore more directories

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,10 @@ theme: minima
 plugins:
   - jekyll-redirect-from
 exclude:
+  - _vendor
   - _src
+  - Gemfile
+  - Gemfile.lock
 
 # Theme configuration
 header_pages:
