Fix up .gitignore and 'make clean'

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
-*.aux
-*.fdb_latexmk
-*.fls
-*.log
-*.nav
-*.out
-*.pdf
-!data/*.pdf
-*.png
-*.snm
-*.toc
-_site
-_vendor
-.sass-cache
-.jekyll-metadata
-auto
+/.jekyll-metadata/
+/.sass-cache/
+/_site/
+/_src/tex/classes/auto/
+/_src/tex/documents/*/auto/
+/_src/tex/documents/*/*.aux
+/_src/tex/documents/*/*.fdb_latexmk
+/_src/tex/documents/*/*.fls
+/_src/tex/documents/*/*.log
+/_src/tex/documents/*/*.nav
+/_src/tex/documents/*/*.out
+/_src/tex/documents/*/*.pdf
+/_src/tex/documents/*/*.snm
+/_src/tex/documents/*/*.toc
+/_src/xcf/out/*.png
+/_vendor/
