--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ header_pages:
     url: /math/
   - title: Mental health
     url: /mental-health/students-speak
+  - title: Fiction
+    url: /fiction/
   - title: Resume
     url: /assets/Resume.pdf
   - title: About
