--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ header_pages:
   - title: Mental health
     url: /mental-health/students-speak
   - title: Fiction
-    url: /fiction/
+    url: /fiction
   - title: Resume
     url: /assets/Resume.pdf
   - title: About
