--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "_src/resume"]
 	path = _src/resume
-	url = git@github.com:raxod502/resume.git
+	url = git@gitlab.com:raxod502/resume.git
 [submodule "_src/stories"]
 	path = _src/stories
-	url = git@github.com:raxod502/fiction-writing.git
+	url = git@gitlab.com:raxod502/fiction-writing.git
