Improve Emacs syntax highlighting

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Intuitive Explanations
 email: radon.neon@gmail.com
-description: Understand, don't memorize.
+description: "Understand, don't memorize."
 url: "https://www.intuitiveexplanations.com"
 github_username: raxod502
 
