Fix link anchors and some links

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "homepage": "https://github.com/raxod502/intuitive-explanations",
   "private": true,
   "dependencies": {
-    "@11ty/eleventy": "^0.12.1"
+    "@11ty/eleventy": "^0.12.1",
+    "markdown-it-anchor": "^8.4.1"
   }
 }
