--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "private": true,
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
+    "liquidjs": "^9.31.0",
     "markdown-it-anchor": "^8.4.1",
     "markdown-toc": "^1.2.0"
   }
