Fix private GitLab URL

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git@gitlab.com:raxod502/resume.git
 [submodule "doc/stories"]
 	path = doc/stories
-	url = git@gitlab.com:raxod502/stories.git
+	url = git@gitlab.com:raxod502/fiction-writing.git
