--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "git+https://github.com/raxod502/intuitive-explanations.git"
   },
-  "author": "Radon Rosborough <radon.neon@gmail.com>",
+  "author": "Radon Rosborough <radon@intuitiveexplanations.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/raxod502/intuitive-explanations/issues"
